--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "php": ">=5.4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.8.*",
-        "puzzlout/framework-mvc": "dev-master"
+        "phpunit/phpunit": "4.8.*"
     },
     "autoload": {
         "psr-4": {
