--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "version": "1.0.1",
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.5.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.8.*"
