--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,9 @@ php:
 before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
- 
-script: phpunit --configuration phpunit.xml
+
+script: 
+  - phpunit --configuration phpunit.xml --coverage-clover=coverage.xml
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
